@@ -12,6 +12,7 @@ xine-lib (1-beta13)
   * fix dxr3 sync problems after seeking
   * fix potential playback problems for MPEG files with rare framerates
     (23.976, 59.94 and 60 fps)
+  * move http proxy configuration to xine itself
   
 xine-lib (1-beta12)
   * enabled SVQ3 video decoding via ffmpeg
